fix: now cba upstream error leads to using tendar by default
